bugfix/otp-skip-step-registration: design alignment

--- a/src/main/webapp/app/shared/components/organisms/registration/registration.scss
+++ b/src/main/webapp/app/shared/components/organisms/registration/registration.scss
@@ -1,3 +1,7 @@
+.registration-modal-header {
+  background-color: var(--p-accent-color);
+}
+
 .registration-content {
   --p-button-primary-background: var(--p-accent-color);
   --p-button-primary-border-color: var(--p-accent-color);
